@@ -3,12 +3,17 @@ package com.jumanji.capston.config.jwt;
 import com.jumanji.capston.config.auth.PrincipalDetails;
 import com.jumanji.capston.config.auth.PrincipalDetailsService;
 import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.MalformedJwtException;
+import io.jsonwebtoken.SignatureException;
+import io.jsonwebtoken.UnsupportedJwtException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import javax.servlet.FilterChain;
@@ -16,11 +21,11 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
+@Slf4j
 @Component
+@ResponseStatus(value = HttpStatus.UNAUTHORIZED, reason = "login required")
 public class JwtRequestFilter extends OncePerRequestFilter {
 
     @Autowired
@@ -29,62 +34,101 @@ public class JwtRequestFilter extends OncePerRequestFilter {
     @Autowired
     private JwtTokenUtil jwtTokenUtil;
 
+
     private static final List<String> EXCLUDE_URL =
-            Collections.unmodifiableList(
-                    Arrays.asList(
-                            "/api/member",
-                            "/authenticate"
-                    ));
+            List.of(
+                    "login"
+                    , "authenticate"
+                    , "join"
+                    , "shopList"
+                    , "validate"
+                    , "validateDscNo"
+                    , "searchAddr"
+                    , "shop"
+                    , "shopList"
+                    , "menu"
+                    , "menuList"
+            );
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
-        System.out.println("In JwtRequestFilter");
+//        System.out.println("In JwtRequestFilter");
+        if (shouldNotFilter(request)) {
+            filterChain.doFilter(request, response);
+        }
         final String requestTokenHeader = request.getHeader("Authorization");
-        System.out.println("TOKEN : " + requestTokenHeader );
+//        System.out.println("TOKEN : " + requestTokenHeader );
         String username = null;
         String jwtToken = null;
-
-        if (requestTokenHeader != null && requestTokenHeader.startsWith("Bearer ")) {
+//        System.out.println("Authorization : " + requestTokenHeader);
+        if (requestTokenHeader != null && requestTokenHeader.startsWith("Bearer ")) { // 헤더에 Authorization 이 있고 Bearer로 시작하면,
             jwtToken = requestTokenHeader.substring(7);
-            System.out.println("Parsing jwtToken : " + jwtToken);
+//            System.out.println("Parsing jwtToken : " + jwtToken);
             try {
                 username = jwtTokenUtil.getUsernameFromToken(jwtToken);
                 System.out.println("username : " + username);
             } catch (IllegalArgumentException e) {
-                System.out.println("Unable to get JWT Token");
+                log.error("Unable to get JWT Token");
+                response.sendError(400, "Unable to get JWT Token");
             } catch (ExpiredJwtException e) {
-                System.out.println("JWT Token has expired");
-            } catch (NullPointerException e){
-                System.out.println("Username is Null!");
+                log.error("JWT Token has expired");
+                response.sendError(401, "JWT Token has expired"); // 401 =>
+            } catch (NullPointerException e) {
+                log.error("Username is Null!");
+                response.sendError(400, "Username is Null!");
+            }catch (SignatureException ex) {
+                log.error("Invalid JWT signature");
+                response.sendError(400, "Invalid request.");
+            } catch (MalformedJwtException ex) {
+                log.error("Invalid JWT token");
+                response.sendError(400, "Invalid request.");
+            } catch (UnsupportedJwtException ex) {
+                log.error("Unsupported JWT token");
+                response.sendError(400, "Invalid request.");
             }
         } else {
-            logger.warn("JWT Token does not begin with Bearer String");
+//            logger.warn("JWT Token does not begin with Bearer String");
         }
-        System.out.println("토큰 체킹 ! ");
-
-        if(username != null) {
-            if(SecurityContextHolder.getContext().getAuthentication() == null){
-                System.out.println("doFilterInternal -> username != null ... ");
+//        System.out.println("토큰 체킹 ! ");
+        System.out.println("토큰 username : " + username);
+        if (username != null) {
+            if (SecurityContextHolder.getContext().getAuthentication() == null) {
+//                System.out.println("doFilterInternal -> username != null ... ");
                 PrincipalDetails userDetails = this.jwtUserDetailService.loadUserByUsername(username);
 
-                if(jwtTokenUtil.validateToken(jwtToken, userDetails)) {
+                if (jwtTokenUtil.validateToken(jwtToken, userDetails)) {
                     UsernamePasswordAuthenticationToken authenticationToken =
-                            new UsernamePasswordAuthenticationToken(userDetails, null ,userDetails.getAuthorities());
+                            new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
 
                     authenticationToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(authenticationToken);
                 }
-            }else{ System.out.println("SecurityContextHolder.getContext().getAuthentication() is null"); }
-        }else{ System.out.println("username is null"); }
-        System.out.println("JWT 체킹 완료!!!");
-        filterChain.doFilter(request,response);
+            } else {
+                System.out.println("SecurityContextHolder.getContext().getAuthentication() is null");
+            }
+        } else {
+            System.out.println("token's username is null");
+        }
+//        System.out.println("JWT 체킹 완료!!!");
+
+        filterChain.doFilter(request, response);
     }
 
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
-        return EXCLUDE_URL.stream().anyMatch(exclude -> exclude.equalsIgnoreCase(request.getServletPath()));
+//        System.out.println(request.getServletPath());
+//        for(String path :request.getServletPath().split("/") ){
+//            System.out.println("-------> " + path);
+//        }
+//        System.out.println("비교할 context split res : " + request.getServletPath().split("/")[3]);
+//        System.out.print("exclude 결과 : ");
+//        System.out.println(EXCLUDE_URL.stream().anyMatch(exclude -> exclude.equalsIgnoreCase(request.getServletPath().split("/")[3])));
+        if(request.getServletPath().split("/").length > 2) {
+            return EXCLUDE_URL.stream().anyMatch(exclude -> exclude.equalsIgnoreCase(request.getServletPath().split("/")[3]));
+        }
+        return false;
     }
 
 }
